--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "dompurify": "^2.3.4",
+    "html-react-parser": "^1.4.5",
+    "html-to-formatted-text": "^2.7.0",
+    "marked": "^4.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
